# platform

./: .gitignore  AGENTS.md  GEMINI.md  QWEN.md  README.md  docker-compose.yml  init.sql  run-postgres.sh  schema.sql
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev_server.py  fly.toml  pyproject.toml  pytest.ini  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: v1_initial_migration.py
backend/app/: init_db.py  main.py
backend/app/api/v1/: __init__.py  auth.py  cards.py  chat.py  (+4 more)
backend/app/auth/: dependencies.py  google.py  oauth2.py  service.py
backend/app/core/: config.py  database.py
backend/app/models/: base.py  card.py  teller.py  transaction.py  user.py
backend/app/schemas/: card.py  chat.py  teller.py  transaction.py  user.py
backend/app/services/: card.py  chat.py  dashboard.py  recommendations.py  teller.py  user.py
backend/docs/: testing_doc.md
backend/handler/: index.py
backend/tests/: conftest.py  test_utils.py
backend/tests/api/: test_auth.py  test_cards.py  test_chat.py  test_dashboard.py  test_error_handling.py  test_performance.py  test_recommendations.py  test_users.py
backend/tests/integration/: test_card_model.py  test_database_constraints.py  test_database_migration_compatibility.py  test_service_database_integration.py  test_transaction_model.py  test_user_model.py
backend/tests/unit/: test_auth_service.py  test_card_service.py  test_chat_service.py  test_dashboard_service.py  test_database.py  test_recommendations_service.py  test_user_service.py
(+278 files in other folders)
