[project]
name = "backend"
version = "0.1.0"
description = "Perkasm Platform API - A FastAPI application with JWT authentication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0,<0.101.0",
    "uvicorn[standard]>=0.20.0,<0.21.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "requests>=2.30.0,<3.0.0",
]

[project.scripts]
dev = "app.main:app"